# MLOps_project

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile.dataset  README.md  cml_data.yaml  data.dvc  pyproject.toml  requirements.txt  requirements_dev.txt  run.sh  run.sh.save  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: ci.yml  data-change.yaml  docker-build.yaml  model-change.yaml  tests.yaml
.vevn/: pyvenv.cfg
configs/: config.yaml
data/.m19_test/: trigger.txt
dockerfiles/: .dockerignore  Dockerfile.api  Dockerfile.front  Dockerfile.train  api.dockerfile  train.dockerfile
docs/: mkdocs.yaml  profiling.md
docs/source/: index.md
front/: front.txt  frontend.dockerfile  frontend.py  frontmin.txt  requirements_frontend.txt  run_api.bat  run_frontend.bat  run_training.bat  start_system.bat  start_system.sh
reports/: README.md
src/credit_card_fraud_analysis/: api.py  data.py  evaluate.py  hydra_config_loader.py  lightning_module.py  make_dataset.py  monitoring_utils.py  scalable.py  train.py  train_lightning.py
src/credit_card_fraud_analysis/utils/: my_logger.py
tests/: test_config.py  test_config_load.py  test_data.py  test_evaluate.py  test_imports.py  test_model.py  test_model_forward.py  test_train.py
tests/integration_tests/: test_api.py
tests/performance_tests/: locust_file.py
