[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "credit_card_fraud_analysis"
version = "0.0.1"
description = "Classification of fraudulent and legitimate credit card transactions using machine learning"
authors = [
  { name = "Christos Psallidas", email = "s253542@dtu.dk" },
  { name = "Dimitrios Dimitriou", email = "s253560@dtu.dk" },
  { name = "Dionysios Sellinas", email = "s242973@dtu.dk" },
  { name = "Georgios Fragkiadoulakis", email = "s242831@dtu.dk" },
]
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["I", "F", "E"]

[tool.ruff.lint.isort]
known-first-party = ["credit_card_fraud_analysis"]
combine-as-imports = true

[tool.coverage.run]
source = ["src"]
omit = [
  "src/tests/*",
  "**/__init__.py",

  # CLI / entrypoints (not unit-tested)
  "src/credit_card_fraud_analysis/train.py",
  "src/credit_card_fraud_analysis/train_lightning.py",
  "src/credit_card_fraud_analysis/train_lightning2.py",
  "src/credit_card_fraud_analysis/make_dataset.py",
  "src/credit_card_fraud_analysis/api.py",
]


[tool.coverage.report]
show_missing = true
fail_under = 50
exclude_lines = [
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]


[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]
addopts = "-v"
